--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.5.2",
     "viem": "^2.19.6",
     "wagmi": "^2.12.5"
