--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^10.0.5",
+    "shopify-api-node": "^3.13.4",
     "tailwind-merge": "^2.5.2",
     "viem": "^2.19.6",
     "wagmi": "^2.12.5"
